--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,37 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family: 'Poppins', sans-serif;
-  background-color: #262626;
-  min-height: 100vh;
+  background-color: black;
+  background-image: radial-gradient(rgba(0, 150, 0, 0.75), black 120%);
+  height: 100vh;
+  margin: 0;
+  overflow: hidden;
+  padding: 2rem;
+  color: white;
+  font: 1.3rem Inconsolata, monospace;
+  text-shadow: 0 0 5px #C8C8C8;
+}
+
+body::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: repeating-linear-gradient(0deg,
+      rgba(black, 0.15),
+      rgba(black, 0.15) 1px,
+      transparent 1px,
+      transparent 2px);
+}
+
+::selection {
+  background: #0080FF;
+  text-shadow: none;
+}
+
+pre {
   margin: 0;
 }
 
@@ -22,7 +50,6 @@ body {
 }
 
 .countdown h2 {
-  color: #fff;
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-size: 20px;
@@ -33,24 +60,10 @@ body {
 }
 
 p {
-  color: #fff;
   margin-top: 0;
   margin-bottom: 1.5rem;
 }
 
-input {
-  font-family: 'Poppins', sans-serif;
-  border-radius: 20px;
-  outline: none;
-  border: none;
-  text-align: center;
-  height: 2rem;
-  margin-bottom: 1rem;
-}
-
-span {
-  color: #ffffff;
-}
 
 .counter {
   display: flex;
@@ -64,13 +77,14 @@ span {
   width: 60px;
   padding: 15px;
   margin: 0 5px;
-  background-color: #262626;
-  color: #fff;
+  background-color: black;
+  background-image: radial-gradient(rgba(0, 150, 0, 0.75), black 120%);
+
   border: 2px solid #000;
 }
 
 .counter div:last-child {
-  background-color: #e91e63;
+  background-color: #e91e1e;
 }
 
 .counter div:before {
